# sudoku

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/sudoku/: barrier.h  block_count_tracker.h  cell_value_parser.h  dimensions.h  fork.h  formatter.h  grid.h  grid_potential.h  groups.h  groupwise_block_counter.h  groupwise_empty_solver.h  groupwise_solver.h  inner_rectangular.h  metrics.h  parallel_solver.h  partition_block_count_tracker.h  partition_grid.h  partition_table.h  partitions.h  potential.h  solution_queue.h  solver.h  solver_interface.h  square.h  standard.h  sudoku.h  types.h  version.h
include/sudoku/cuda/: block_counter.cuh  clock.cuh  device_buffer.h  device_solver.cuh  dimensions.h  error.h  error_check.h  grid.cuh  grid.h  guess_stack.cuh  guess_stack.h  host_and_device.h  kernel.h  mirror_buffer.h  related_groups.cuh  result.h  solver.h  types.h  util.h
pkg/: CMakeLists.txt  sudoku-config.in.cmake
scripts/: appveyor_before_build.bat  appveyor_build_script.bat  appveyor_test_script.bat  configure.py  travis_after_success.sh  travis_before_script.sh  travis_script.sh
src/: CMakeLists.txt
src/sudoku/: CMakeLists.txt  block_count_tracker.cpp  cell_value_parser.cpp  dimensions.cpp  fork.cpp  formatter.cpp  grid.cpp  grid_potential.cpp  groups.cpp  groupwise_block_counter.cpp  groupwise_empty_solver.cpp  groupwise_solver.cpp  inner_rectangular.cpp  parallel_solver.cpp  partition_block_count_tracker.cpp  partition_grid.cpp  partition_table.cpp  partitions.cpp  potential.cpp  solution_queue.cpp  solver.cpp  square.cpp  standard.cpp  version.in.cpp
src/sudoku_cli/: CMakeLists.txt  program_options.cpp  program_options.h  sudoku_cli.cpp
src/sudoku_cuda/: CMakeLists.txt  dimensions.cu  grid.cu  guess_stack.cu  kernel.cu  result.cpp  solver.cu  sudoku_cuda.cu
src/test/: CMakeLists.txt  cell_value_parser_test.cpp  dimensions_test.cpp  formatter_test.cpp  potential_test.cpp  solver_test.cpp
test/: CMakeLists.txt  groups_test.cpp  sudoku_test.cpp  util.h
test/sudoku_cuda_test/: CMakeLists.txt  block_counter_kernels.cu  block_counter_kernels.h  block_counter_test.cpp  clock_kernels.cu  clock_kernels.h  clock_test.cpp  dimensions_test.cpp  grid_kernels.cu  grid_kernels.h  grid_test.cpp  guess_stack_kernels.cu  guess_stack_kernels.h  guess_stack_test.cpp  kernel_test.cpp  related_groups_kernels.cu  related_groups_kernels.h  related_groups_test.cpp  solver_test.cpp  sudoku_cuda_test.cpp  util.cpp  util.h
test/sudoku_grid_perf_test/: CMakeLists.txt  sudoku_grid_perf_test.cpp
test/sudoku_partition_test/: CMakeLists.txt  sudoku_partition_test.cpp
test/sudoku_perf_test/: CMakeLists.txt  sudoku_perf_test.cpp
test/sudoku_test/: CMakeLists.txt  barrier_test.cpp  block_count_tracker_test.cpp  cell_value_parser_test.cpp  cuda_dimensions_test.cpp  dimensions_test.cpp  fork_test.cpp  formatter_test.cpp  grid_potential_test.cpp  grid_test.cpp  groups_test.cpp  groupwise_block_counter_test.cpp  inner_rectangular_test.cpp  parallel_solver_test.cpp  partition_block_count_tracker_test.cpp  partition_grid_test.cpp  partition_table_test.cpp  potential_test.cpp  solution_queue_test.cpp  solver_interface_test.cpp  solver_test.cpp  square_test.cpp  util.h  version_test.cpp
